# ccsinfo

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
ccsinfo/: SKILL.md
docs/: active-session-detection.html  active-session-detection.md  api-overview.html  api-overview.md  api-projects.html  api-projects.md  api-search.html  api-search.md  api-sessions.html  api-sessions.md  api-stats-and-health.html  api-stats-and-health.md  api-tasks.html  api-tasks.md  architecture-and-project-structure.html  architecture-and-project-structure.md  automation-and-ci.html  automation-and-ci.md  configuration.html  configuration.md  data-model-and-storage.html  data-model-and-storage.md  development-setup.html  development-setup.md  index.html  installation.html  installation.md  json-output-and-automation.html  json-output-and-automation.md  llms-full.txt  llms.txt  local-cli-quickstart.html  local-cli-quickstart.md  overview.html  overview.md  project-ids-and-lookups.html  project-ids-and-lookups.md  projects-guide.html  projects-guide.md  remote-server-quickstart.html  (+16 more)
src/ccsinfo/: __init__.py  __main__.py
src/ccsinfo/cli/: __init__.py  main.py  state.py
src/ccsinfo/cli/commands/: __init__.py  projects.py  search.py  sessions.py  stats.py  tasks.py
src/ccsinfo/core/: __init__.py  client.py
src/ccsinfo/core/models/: __init__.py  base.py  messages.py  projects.py  sessions.py  stats.py  tasks.py
src/ccsinfo/core/parsers/: __init__.py  history.py  jsonl.py  sessions.py  tasks.py
src/ccsinfo/core/services/: __init__.py  project_service.py  search_service.py  session_service.py  stats_service.py  task_service.py
src/ccsinfo/server/: __init__.py  app.py
src/ccsinfo/server/routers/: __init__.py  health.py  projects.py  search.py  sessions.py  stats.py  tasks.py
src/ccsinfo/utils/: __init__.py  formatters.py  paths.py
tests/: __init__.py  conftest.py  test_models.py  test_parsers.py  test_services.py  test_utils_paths.py
